Fix Image Stretchin in Safari

--- a/css/style.css
+++ b/css/style.css
@@ -538,6 +538,7 @@ h2 > span {
 #project img {
   padding: 1em;
   max-width: 300px;
+  height: 
 }
 
 .projGif {
@@ -897,7 +898,6 @@ Medium devices (640px and larger)
   #project img {
     padding: 0.5em;
     max-width: 400px;
-    max-height: 400px;
   }
 
   #project .persona {
